[tool.poetry]
name = "tool-tuesday"
version = "0.1.0"
description = ""
authors = ["Dave Holst <daveholst@gmail.com>"]
readme = "README.md"
packages = [{include = "tool_tuesday"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.6.1"
dotenv = "^0.0.5"
google-search-results = "^2.4.1"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
grpcio = [
    {markers="sys_platform == 'darwin' and platform_machine=='arm64'", path='vendored/grpcio-1.51.1-cp311-cp311-macosx_11_0_arm64.whl'},
    {version="^1.47.2", markers="sys_platform != 'darwin' and platform_machine!='arm64'", source="pypi"}
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
