[tool.poetry]
name = "tool-tuesday"
version = "0.1.0"
description = ""
authors = ["Dave Holst <daveholst@gmail.com>"]
readme = "README.md"
packages = [{include = "tool_tuesday"}]

[tool.poetry.scripts]
local_dev = "tool_tuesday.local_dev:start"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
